Replace DatatypeConverter with Java8+ Base64 util.